user score endpoint
